--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: java
+
 jdk:
-- oraclejdk7
-- oraclejdk8
-- openjdk6
-- openjdk7
+  - oraclejdk7
+  - oraclejdk8
+  - openjdk6
+  - openjdk7
+
+os:
+  - linux
+  - osx
