--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ jdk:
 os:
   - linux
   - osx
+
+
+before_install:
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew tap caskroom/cask; brew install Caskroom/cask/java; fi
